@@ -1,7 +1,7 @@
 #!/bin/sh
 
 # Check the sizes of Stage 2 and Stage 1.5's.
-# Copyright (C) 1999  Free Software Foundation, Inc.
+# Copyright (C) 1999,2004  Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -25,8 +25,6 @@
 # status 1, otherwise do nothing.
 check ()
 {
-    local file size limit
-
     file=$1
     limit=$2
     set dummy `ls -l $file`
